<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindTheWords</string>
    <string name="splash_content_description_focus">Splash focus</string>
    <string name="splash_loading">Loading, please wait&#8230;</string>
    <string name="home_menu_play">Play</string>
    <string name="home_menu_settings">Settings</string>
    <string name="home_menu_high_scores">High Scores</string>
    <string name="home_menu_achievements">Achievements</string>

</resources>